Additional document type predicates

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,6 +1,7 @@
 <%= presenter.attribute_to_html(:artist) %>
 <%= presenter.attribute_to_html(:birth_date) %>
 <%= presenter.attribute_to_html(:birth_year) %>
+<%= presenter.attribute_to_html(:capture_device) %>
 <%= presenter.attribute_to_html(:citi_uid) %>
 <%= presenter.attribute_to_html(:creator_display) %>
 <%= presenter.attribute_to_html(:credit_line) %>
@@ -8,16 +9,21 @@
 <%= presenter.attribute_to_html(:death_date) %>
 <%= presenter.attribute_to_html(:death_year) %>
 <%= presenter.attribute_to_html(:department) %>
+<%= presenter.attribute_to_html(:digitization_source) %>
 <%= presenter.attribute_to_html(:dimensions_display) %>
+<%= presenter.attribute_to_html(:document_type) %>
 <%= presenter.attribute_to_html(:earliest_year) %>
 <%= presenter.attribute_to_html(:end_date) %>
 <%= presenter.attribute_to_html(:exhibition_history) %>
 <%= presenter.attribute_to_html(:exhibition_type) %>
 <%= presenter.attribute_to_html(:fedora_uri) %>
+<%= presenter.attribute_to_html(:first_document_sub_type) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
 <%= presenter.attribute_to_html(:inscriptions) %>
+<%= presenter.attribute_to_html(:keyword) %>
 <%= presenter.attribute_to_html(:lat) %>
 <%= presenter.attribute_to_html(:latest_year) %>
+<%= presenter.attribute_to_html(:legacy_uid) %>
 <%= presenter.attribute_to_html(:long) %>
 <%= presenter.attribute_to_html(:main_ref_number) %>
 <%= presenter.attribute_to_html(:medium_display) %>
@@ -28,5 +34,6 @@
 <%= presenter.attribute_to_html(:provenance_text) %>
 <%= presenter.attribute_to_html(:publ_ver_level) %>
 <%= presenter.attribute_to_html(:publication_history) %>
+<%= presenter.attribute_to_html(:second_document_sub_type) %>
 <%= presenter.attribute_to_html(:start_date) %>
 <%= presenter.attribute_to_html(:uid) %>
