Displaying all asset fields in show view, fixes #151

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,14 +1,19 @@
+<%= presenter.attribute_to_html(:aic_depositor) %>
 <%= presenter.attribute_to_html(:artist) %>
+<%= presenter.attribute_to_html(:batch_uid) %>
 <%= presenter.attribute_to_html(:birth_date) %>
 <%= presenter.attribute_to_html(:birth_year) %>
 <%= presenter.attribute_to_html(:capture_device) %>
 <%= presenter.attribute_to_html(:citi_uid) %>
+<%= presenter.attribute_to_html(:compositing) %>
+<%= presenter.attribute_to_html(:create_date) %>
 <%= presenter.attribute_to_html(:creator_display) %>
 <%= presenter.attribute_to_html(:credit_line) %>
 <%= presenter.attribute_to_html(:date_display) %>
 <%= presenter.attribute_to_html(:death_date) %>
 <%= presenter.attribute_to_html(:death_year) %>
 <%= presenter.attribute_to_html(:department) %>
+<%= presenter.attribute_to_html(:dept_created) %>
 <%= presenter.attribute_to_html(:digitization_source) %>
 <%= presenter.attribute_to_html(:dimensions_display) %>
 <%= presenter.attribute_to_html(:document_type) %>
@@ -19,14 +24,18 @@
 <%= presenter.attribute_to_html(:fedora_uri) %>
 <%= presenter.attribute_to_html(:first_document_sub_type) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
+<%= presenter.attribute_to_html(:imaging_uid) %>
 <%= presenter.attribute_to_html(:inscriptions) %>
 <%= presenter.attribute_to_html(:keyword) %>
+<%= presenter.attribute_to_html(:language) %>
 <%= presenter.attribute_to_html(:lat) %>
 <%= presenter.attribute_to_html(:latest_year) %>
 <%= presenter.attribute_to_html(:legacy_uid) %>
+<%= presenter.attribute_to_html(:light_type) %>
 <%= presenter.attribute_to_html(:long) %>
 <%= presenter.attribute_to_html(:main_ref_number) %>
 <%= presenter.attribute_to_html(:medium_display) %>
+<%= presenter.attribute_to_html(:modified_date) %>
 <%= presenter.attribute_to_html(:name_official) %>
 <%= presenter.attribute_to_html(:name_working) %>
 <%= presenter.attribute_to_html(:object_type) %>
@@ -36,4 +45,7 @@
 <%= presenter.attribute_to_html(:publication_history) %>
 <%= presenter.attribute_to_html(:second_document_sub_type) %>
 <%= presenter.attribute_to_html(:start_date) %>
+<%= presenter.attribute_to_html(:status) %>
+<%= presenter.attribute_to_html(:transcript) %>
 <%= presenter.attribute_to_html(:uid) %>
+<%= presenter.attribute_to_html(:view) %>
