--- a/app/views/records/edit_fields/_rights_holder_uris.html.erb
+++ b/app/views/records/edit_fields/_rights_holder_uris.html.erb
@@ -1,3 +1,3 @@
-<%= f.input :rights_holder_uris, as: :select, label: t('simple_form.labels.generic_file.rights_holder'),
+<%= f.input :rights_holder_uris, as: :select, label: t('simple_form.labels.generic_work.rights_holder'),
     collection: [], selected: @form.rights_holder_uris,
     input_html: { class: 'form-control', multiple: true } %>
