Initial OSD implementation.

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -25,3 +25,5 @@
     <%#= render 'user_activity', presenter: @presenter %>
   </div>
 </div>
+<div id="osd_modal_bg"><div id="osd_canvas"></div></div>
+
