Render document types as data attributes

--- a/app/views/records/edit_fields/_document_type_uri.html.erb
+++ b/app/views/records/edit_fields/_document_type_uri.html.erb
@@ -1,5 +1,7 @@
-<div class="form-group select required generic_work_document_type_uri">
-  	<label class="multi_value required control-label" for="generic_work_document_type_uri">Document type <span class="label label-info required-tag">required</span></label>    
+<div class="form-group select required generic_work_document_type_uri" data-uri="<%= f.object.uri_for(:document_type)%>">
+  <label class="multi_value required control-label" for="generic_work_document_type_uri">
+    Document type <span class="label label-info required-tag">required</span>
+  </label>    
 	
 	<select class="select required form-control form-control" required="required" aria-required="true" name="generic_work[document_type_uri]" id="generic_work_document_type_uri">
 		<option selected value="base">Please select asset type first</option>
