Use font-url in css so asset will compile

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'idealsans';
-  src: url('IdealSans-Thin.otf') format('truetype');
+  src: font-url('IdealSans-Thin.otf') format('truetype');
 }
 
 $aicred: #9d1c33;
