--- a/app/views/records/edit_fields/_asset_type.html.erb
+++ b/app/views/records/edit_fields/_asset_type.html.erb
@@ -3,8 +3,8 @@
   			  as: :select,
   			  collection: [['Still Image', AICType.StillImage], ['Text', AICType.Text]],
               input_html: { class: 'form-control', multiple: false, id: 'asset_type_select' },
-              required: f.object.required?(key) %>
-  <%= f.input :asset_type, as: :hidden %>
+              required: true %>
+  <%= f.input :asset_type, as: :hidden, input_html: { id: 'hidden_asset_type' } %>
 <% else %>
   <%= f.input :asset_type, as: :hidden, value: f.object.asset_type %>
 <% end %>
