Change masthead logo to beta and home page background image. (#243)

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -106,3 +106,8 @@ ul.nav {
         z-index: 999;
         background-color: white;
 }
+
+#home_header {
+    background-image: image-url('lakeshore-2.jpg');
+    background-position: 0% 50%;
+}
