Add condition to render static thumbnail if asset is not an image, fixes #639. (#246)

--- a/app/views/curation_concerns/base/_representative_media.html.erb
+++ b/app/views/curation_concerns/base/_representative_media.html.erb
@@ -1,5 +1,10 @@
 <% if presenter.representative_id.present? && presenter.representative_presenter.present? %>
-  <%= render 'catalog/openseadragon_default', document: presenter.representative_presenter.solr_document %>
+  <% mime_type = presenter.representative_presenter.solr_document['mime_type_ssi']
+    if ['image/jpeg', 'image/png', 'image/tiff'].include? mime_type %>
+    <%= render 'catalog/openseadragon_default', document: presenter.representative_presenter.solr_document %>
+  <% else %>
+    <%= media_display presenter.representative_presenter %>
+  <% end %>
 <% else %>
   <%= image_tag 'nope.png', class: "canonical-image" %>
 <% end %>
