--- a/app/views/curation_concerns/base/_add_asset.html.erb
+++ b/app/views/curation_concerns/base/_add_asset.html.erb
@@ -5,8 +5,8 @@
   </button>
   <ul class="dropdown-menu" aria-labelledby="add-asset-menu">
     <li><%= link_to "Batch Add Representation",
-                    sufia.new_batch_upload_path(representation_for: params[:id]) %></li>
+                    sufia.new_batch_upload_path(representation_for: presenter) %></li>
     <li><%= link_to "Batch Add Documentation",
-                    sufia.new_batch_upload_path(document_for: params[:id]) %></li>
+                    sufia.new_batch_upload_path(document_for: presenter) %></li>
   </ul>
 </div>
