--- a/app/views/curation_concerns/base/_relationships.html.erb
+++ b/app/views/curation_concerns/base/_relationships.html.erb
@@ -1,5 +1,5 @@
 <h2>Relationships</h2>
-<%= render 'add_asset' if presenter.citi_presenter? %>
+<%= render 'add_asset', presenter: presenter if presenter.citi_presenter? %>
 <% if presenter.has_relationships? %>
   <%= render_preferred_representations(presenter) %>
   <%= render_representations(presenter) %>
