--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -8,24 +8,24 @@
 <%= presenter.attribute_to_html(:compositing) %>
 <%= presenter.attribute_to_html(:create_date) %>
 <%= presenter.attribute_to_html(:creator_display) %>
-<%= presenter.attribute_to_html(:credit_line) %>
+<%= presenter.attribute_to_html(:credit_line, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:date_display) %>
 <%= presenter.attribute_to_html(:death_date) %>
 <%= presenter.attribute_to_html(:death_year) %>
 <%= presenter.attribute_to_html(:department) %>
 <%= presenter.attribute_to_html(:dept_created) %>
 <%= presenter.attribute_to_html(:digitization_source) %>
-<%= presenter.attribute_to_html(:dimensions_display) %>
+<%= presenter.attribute_to_html(:dimensions_display, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:document_type) %>
 <%= presenter.attribute_to_html(:earliest_year) %>
 <%= presenter.attribute_to_html(:end_date) %>
-<%= presenter.attribute_to_html(:exhibition_history) %>
+<%= presenter.attribute_to_html(:exhibition_history, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:exhibition_type) %>
 <%= presenter.attribute_to_html(:fedora_uri) %>
 <%= presenter.attribute_to_html(:first_document_sub_type) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
 <%= presenter.attribute_to_html(:imaging_uid) %>
-<%= presenter.attribute_to_html(:inscriptions) %>
+<%= presenter.attribute_to_html(:inscriptions, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:keyword) %>
 <%= presenter.attribute_to_html(:language) %>
 <%= presenter.attribute_to_html(:lat) %>
@@ -34,15 +34,15 @@
 <%= presenter.attribute_to_html(:light_type) %>
 <%= presenter.attribute_to_html(:long) %>
 <%= presenter.attribute_to_html(:main_ref_number) %>
-<%= presenter.attribute_to_html(:medium_display) %>
+<%= presenter.attribute_to_html(:medium_display, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:modified_date) %>
 <%= presenter.attribute_to_html(:name_official) %>
 <%= presenter.attribute_to_html(:name_working) %>
 <%= presenter.attribute_to_html(:object_type) %>
-<%= presenter.attribute_to_html(:place_of_origin) %>
-<%= presenter.attribute_to_html(:provenance_text) %>
+<%= presenter.attribute_to_html(:place_of_origin, render_as: :multiline) %>
+<%= presenter.attribute_to_html(:provenance_text, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:publ_ver_level) %>
-<%= presenter.attribute_to_html(:publication_history) %>
+<%= presenter.attribute_to_html(:publication_history, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:second_document_sub_type) %>
 <%= presenter.attribute_to_html(:start_date) %>
 <%= presenter.attribute_to_html(:status) %>
