visibility department checked #705 (#255)

--- a/app/views/curation_concerns/base/_form_visibility_component.html.erb
+++ b/app/views/curation_concerns/base/_form_visibility_component.html.erb
@@ -30,7 +30,7 @@
         </li>
         <li class="radio">
           <label>
-            <%= f.radio_button :visibility, Permissions::LakeshoreVisibility::VISIBILITY_TEXT_VALUE_DEPARTMENT, data: { 'target': '#collapseDepartment' } %>
+            <%= f.radio_button :visibility, Permissions::LakeshoreVisibility::VISIBILITY_TEXT_VALUE_DEPARTMENT, data: { 'target': '#collapseDepartment' }, :checked => true %>
             <%= t('curation_concerns.visibility.department.label_html') %>
             <div class="collapse" id="collapseDepartment">
               <p>
