--- a/app/views/curation_concerns/base/_add_asset.html.erb
+++ b/app/views/curation_concerns/base/_add_asset.html.erb
@@ -1,12 +1,12 @@
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="add-asset-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Add asset
+    <%= t("lakeshore.relationship.add_assets") %>
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="add-asset-menu">
-    <li><%= link_to "Batch Add Representation",
+    <li><%= link_to t("lakeshore.relationship.batch_add_representations"),
                     sufia.new_batch_upload_path(representation_for: presenter) %></li>
-    <li><%= link_to "Batch Add Documentation",
+    <li><%= link_to t("lakeshore.relationship.batch_add_documentation"),
                     sufia.new_batch_upload_path(document_for: presenter) %></li>
   </ul>
 </div>
