Fix CITI view (#257)
* Adjust main menu and dashboard items, fixes #665.

* Replace drop-down menu with plain links to test CITI support.

* Render CITI relationship page separately with plain links.

* Fix test.

--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -1,1 +1,12 @@
-<%= render "curation_concerns/base/relationships", presenter: @presenter %>
+<p><%= link_to "Add Representations",
+    sufia.new_batch_upload_path(representation_for: @presenter), { class: "add_representations_btn" }%></p>
+<p><%= link_to "Add Documentation",
+    sufia.new_batch_upload_path(document_for: @presenter), { class: "add_document_btn" } %></p>
+
+<% if @presenter.has_relationships? %>
+  <%= render_preferred_representations(@presenter) %>
+  <%= render_representations(@presenter) %>
+  <%= render_documents(@presenter) %>
+<% else %>
+  <p>No relationships found for this <%= @presenter.human_readable_type.gsub('Work', 'Object') %></p>
+<% end %>
