--- a/app/views/curation_concerns/base/_relationships.html.erb
+++ b/app/views/curation_concerns/base/_relationships.html.erb
@@ -1,9 +1,5 @@
 <h2>Relationships</h2>
-<%#= render 'add_asset', presenter: presenter if presenter.citi_presenter? %>
-<p><%= link_to "Batch Add Representation",
-sufia.new_batch_upload_path(representation_for: presenter) %></p>
-<p><%= link_to "Batch Add Documentation",
-    sufia.new_batch_upload_path(document_for: presenter) %></p>
+<%= render 'add_asset', presenter: presenter if presenter.citi_presenter? %>
 
 <% if presenter.has_relationships? %>
   <%= render_preferred_representations(presenter) %>
