Custom document type display field, fixes #616

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -15,14 +15,13 @@
 <%= presenter.attribute_to_html(:department) %>
 <%= presenter.attribute_to_html(:dept_created) %>
 <%= presenter.attribute_to_html(:digitization_source) %>
+<%= presenter.attribute_to_html(:document_types) %>
 <%= presenter.attribute_to_html(:dimensions_display, render_as: :multiline) %>
-<%= presenter.attribute_to_html(:document_type) %>
 <%= presenter.attribute_to_html(:earliest_year) %>
 <%= presenter.attribute_to_html(:end_date) %>
 <%= presenter.attribute_to_html(:exhibition_history, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:exhibition_type) %>
 <%= presenter.attribute_to_html(:fedora_uri) %>
-<%= presenter.attribute_to_html(:first_document_sub_type) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
 <%= presenter.attribute_to_html(:imaging_uid) %>
 <%= presenter.attribute_to_html(:inscriptions, render_as: :multiline) %>
@@ -43,7 +42,6 @@
 <%= presenter.attribute_to_html(:provenance_text, render_as: :multiline) %>
 <%= presenter.attribute_to_html(:publ_ver_level) %>
 <%= presenter.attribute_to_html(:publication_history, render_as: :multiline) %>
-<%= presenter.attribute_to_html(:second_document_sub_type) %>
 <%= presenter.attribute_to_html(:start_date) %>
 <%= presenter.attribute_to_html(:status) %>
 <%= presenter.attribute_to_html(:transcript) %>
