Correcting link error

--- a/app/views/sufia/homepage/_recent_document.html.erb
+++ b/app/views/sufia/homepage/_recent_document.html.erb
@@ -15,7 +15,7 @@
       <% if suppress_link %>
         <%= truncated_title %>
       <% else %>
-        <%= link_to(recent_document, truncated_title) %>
+        <%= link_to(truncated_title, recent_document) %>
       <% end %>
     </h3>
     <p>
