Fix spacing in select_doctype JS. (#269)
* Adjust main menu and dashboard items, fixes #665.

* Replace drop-down menu with plain links to test CITI support.

* Revert link change in non-CITI relationship view.

* Add workers to default resque configuration.

* Fix HTML syntax in doctype selector JS.

* Fix spacing in select_doctype JS.

* Fix test.

* Fix test.

--- a/app/views/curation_concerns/base/_form_relationships.html.erb
+++ b/app/views/curation_concerns/base/_form_relationships.html.erb
@@ -2,7 +2,7 @@
 
 <div id="representations">
   <% if params.fetch(:representation_for, nil) %>
-    <p>CITI resource <%= params.fetch(:representation_for) %> will be added as a representation</p>
+    <p>This Asset will be added as a representation of CITI resource #<%= params.fetch(:representation_for) %>.</p>
     <%= f.hidden_field :additional_representation, value: params.fetch(:representation_for) %>
   <% end %>
   <%= f.input :representations_for, as: :multi_value, input_html: { class: 'form-control' } %>
@@ -10,7 +10,7 @@
 
 <div id="documents">
   <% if params.fetch(:document_for, nil) %>
-    <p>CITI resource <%= params.fetch(:document_for) %> will be added as a document</p>
+    <p>This Asset will be added as documentation of CITI resource #<%= params.fetch(:document_for) %>.</p>
     <%= f.hidden_field :additional_document, value: params.fetch(:document_for) %>
   <% end %>
   <%= f.input :documents_for, as: :multi_value, input_html: { class: 'form-control' } %>
