Hide search link, temporarily fixes #742 (#271)
* Adjust main menu and dashboard items, fixes #665.

* Replace drop-down menu with plain links to test CITI support.

* Revert link change in non-CITI relationship view.

* Add workers to default resque configuration.

* Hide advanced search link, fixes #742.

--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -17,7 +17,7 @@
           <%= render partial: 'catalog/search_form' %>
         </div>
 	    <div class="col-sm-4 col-md-3 col-lg-4">
-          <a href="#" class="advance-search">Advanced Search</a>
+          <a href="#" style="display: none;" class="advance-search">Advanced Search</a>
         </div>
 	  </div>
 	  <div class="navbar-right row col-sm-12 col-md-9 col-lg-8">
