Reword open access note, fixes #736. (#272)

--- a/app/views/curation_concerns/base/_form_visibility_component.html.erb
+++ b/app/views/curation_concerns/base/_form_visibility_component.html.erb
@@ -12,7 +12,7 @@
             <%= t('curation_concerns.visibility.open.label_html') %>
             <div class="collapse" id="collapsePublic">
               <p>
-                Please note, marking something as published means that it may be made available on the Web or other public channels. You should mark this permission if you want to be able to publish this asset to an artwork page, tour, resource or other AIC digital forum.
+                Please note, marking something as open access means that it may be made available on the Web or other public channels. You should mark this permission if you want to be able to publish this asset to an artwork page, tour, resource or other AIC digital forum.
               </p>
             </div>
           </label>
