Add CITI link. (#273)

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -111,3 +111,11 @@ ul.nav {
     background-image: image-url('lakeshore-2.jpg');
     background-position: 0% 50%;
 }
+
+.btn.citi-btn {
+  background-image: image-url('CITI_Link_icon-32.png');
+  background-position: 8px 8px;
+  background-repeat: no-repeat;
+  background-size: 16px 16px;
+  padding-left: 32px;
+}
