--- a/app/views/curation_concerns/base/_relationships.html.erb
+++ b/app/views/curation_concerns/base/_relationships.html.erb
@@ -1,10 +1,3 @@
 <h2>Relationships</h2>
 <%= render 'add_asset', presenter: presenter if presenter.citi_presenter? %>
-
-<% if presenter.has_relationships? %>
-  <%= render_preferred_representations(presenter) %>
-  <%= render_representations(presenter) %>
-  <%= render_documents(presenter) %>
-<% else %>
-  <p>No relationships found for this <%= presenter.human_readable_type %></p>
-<% end %>
+<%= render 'relationships_table', presenter: presenter %>
