Remove TIFF from list of formats supported by OSD viewer. (#277)

--- a/app/views/curation_concerns/base/_representative_media.html.erb
+++ b/app/views/curation_concerns/base/_representative_media.html.erb
@@ -1,6 +1,6 @@
 <% if presenter.representative_id.present? && presenter.representative_presenter.present? %>
   <% mime_type = presenter.representative_presenter.solr_document['mime_type_ssi']
-    if ['image/jpeg', 'image/png', 'image/tiff'].include? mime_type %>
+    if ['image/jpeg', 'image/png'].include? mime_type %>
     <%= render 'catalog/openseadragon_default', document: presenter.representative_presenter.solr_document %>
   <% else %>
     <%= media_display presenter.representative_presenter %>
