--- a/app/views/lakeshore/_controls.html.erb
+++ b/app/views/lakeshore/_controls.html.erb
@@ -1,5 +1,8 @@
 <ul class="nav navbar-nav col-sm-12 col-md-12">
-  <li <%= 'class=active' if current_page?(sufia.about_path) %>><%= link_to 'About', sufia.about_path, :'data-no-turbolink'=>"true" %></li>
-  <li <%= 'class=active' if action_name == "help" %>><a href="<%= sufia.static_path('help') %>">Help</a></li>
-  <li <%= 'class=active' if current_page?(sufia.contact_path) %>><a href="<%= sufia.contact_path %>">Contact</a></li>
+  <li <%= 'class=active' if current_page?(sufia.about_path) %>>
+    <%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
+  <li <%= 'class=active' if action_name == "help" %>>
+    <%= link_to t(:'sufia.controls.help'), sufia.help_path %></li>
+  <li <%= 'class=active' if current_page?(sufia.contact_path) %>>
+    <%= link_to t(:'sufia.controls.contact'), sufia.contact_path %></li>
 </ul>
