--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -16,7 +16,7 @@
       <% end %>
       <ul class="dropdown-menu dropdown-menu-right" role="menu">
         <li><%= link_to 'View Profile', sufia.profile_path(current_user) %></li>
-        <li class="hidden"><%= link_to 'Edit Profile', sufia.edit_profile_path(current_user) %></li>
+        <li><%= link_to 'Edit Profile', sufia.edit_profile_path(current_user) %></li>
         <li class="divider"></li>
         <%# @TODO This is crude, we need to put the host prefix in an environment-dependent variable. %>
         <li><%= link_to 'Logout', 'https://coll-idp.artic.edu/saml2/idp/SingleLogoutService.php?ReturnTo=' + request.base_url %></li>
