--- a/app/views/curation_concerns/base/_form_share.html.erb
+++ b/app/views/curation_concerns/base/_form_share.html.erb
@@ -1,4 +1,4 @@
-<h3>Sharing With</h3>
+<h2>Sharing With</h2>
 <% depositor = f.object.depositor %>
 <% dept_created_uid = f.object.dept_created.citi_uid unless f.object.dept_created.nil? %>
 
@@ -21,6 +21,7 @@
     </td>
   </tr>
   <%= f.fields_for :permissions do |permission_fields| %>
+
     <%# skip admin and any permisions maintained by visibility %>
     <% next if ['admin', 'registered', 'department', dept_created_uid, depositor].include? permission_fields.object.agent_name.downcase %>
     <tr>
@@ -30,6 +31,7 @@
       </td>
       <td>
 	<%= permission_fields.label :agent_name, class: "control-label" do %>
+    
 	  <%= user_display_name_and_key(permission_fields.object.agent_name) %>
 	<% end %>
 	<button class="btn close remove_perm" data-index="<%= permission_fields.index %>">&times;</button>
@@ -38,11 +40,12 @@
   <% end %>
 </table>
 
-
-<h3>Share work with other users</h3>
-
+<h2>Share work with other users</h2>
+<p class="sr-only">Use the add button to give access to one <%=t('sufia.account_label') %> at a time (it will be added to the list below).
+  Select the user, by name or <%= t('sufia.account_label') %>. Then select the access level you wish to grant and click on Add this
+  <%= t('sufia.account_label') %> to complete adding the permission.
+</p>
 <div class="form-group row">
-  <p class="sr-only">Use the add button to give access to one <%=t('sufia.account_label') %> at a time (it will be added to the list below).  Select the user, by name or <%= t('sufia.account_label') %>. Then select the access level you wish to grant and click on Add this <%= t('sufia.account_label') %> to complete adding the permission.</p>
   <div class="col-sm-5">
     <label for="new_user_name_skel" class="sr-only"><%= t('sufia.account_label') %> (without the <%= t('sufia.directory.suffix') %> part)</label>
     <%= text_field_tag 'new_user_name_skel', nil %>
@@ -60,7 +63,7 @@
   </div>
 </div>
 
-<h3>Share work with groups of users</h3>
+<h2>Share work with groups of users</h2>
 
 <div class="form-group row">
   <p class="sr-only">Use the add button to give access to one group at a time (it will be added to the list below).</p>
@@ -82,6 +85,6 @@
 <script type="text/x-tmpl" id="tmpl-work-grant">
 <tr>
   <td>{%= o.accessLabel %}</td>
-  <td><label class="control-label">{%= o.name %}</label> <button class="btn close">&times;</button></td>
+  <td><label class="control-label">{%= o.label %}</label> <button class="btn close">&times;</button></td>
 </tr>
 </script>
