--- a/app/views/curation_concerns/base/_add_asset.html.erb
+++ b/app/views/curation_concerns/base/_add_asset.html.erb
@@ -5,8 +5,8 @@
   </button>
   <ul class="dropdown-menu" aria-labelledby="add-asset-menu">
     <li><%= link_to t("lakeshore.relationship.batch_add_representations"),
-                    sufia.new_batch_upload_path(representation_for: presenter) %></li>
+                    sufia.new_batch_upload_path(representation_for: presenter, resource_title: presenter.display_pref_label_and_uid) %></li>
     <li><%= link_to t("lakeshore.relationship.batch_add_documentation"),
-                    sufia.new_batch_upload_path(document_for: presenter) %></li>
+                    sufia.new_batch_upload_path(document_for: presenter, resource_title: presenter.display_pref_label_and_uid) %></li>
   </ul>
 </div>
