--- a/app/views/curation_concerns/base/_form_relationships.html.erb
+++ b/app/views/curation_concerns/base/_form_relationships.html.erb
@@ -1,11 +1,11 @@
 <h3>Relationships for this asset</h3>
-
 <%= select_tag "autocomplete_model", options_for_select(
       [ "Agent", "Exhibition", "Place", "Shipment", "Transaction", "Work" ], "Agent") %>
 
 <div id="representations">
   <% if params.fetch(:representation_for, nil) %>
-    <p>This Asset will be added as a representation of CITI resource #<%= params.fetch(:representation_for) %>.</p>
+  <!-- this is a good case for new property on presenter that tries for preferred label and defaults to id.-->
+    <p>This Asset will be added as a representation of CITI resource <%= params.fetch(:resource_title) %>.</p>
     <%= f.hidden_field :additional_representation, value: params.fetch(:representation_for) %>
   <% end %>
   <%= f.input :representations_for, as: :hidden_multi_select, input_html: { class: 'form-control' }, required: false %>
@@ -13,7 +13,7 @@
 
 <div id="documents">
   <% if params.fetch(:document_for, nil) %>
-    <p>This Asset will be added as documentation of CITI resource #<%= params.fetch(:document_for) %>.</p>
+    <p>This Asset will be added as documentation of CITI resource <%= params.fetch(:resource_title) %>.</p>
     <%= f.hidden_field :additional_document, value: params.fetch(:document_for) %>
   <% end %>
   <%= f.input :documents_for, as: :hidden_multi_select, input_html: { class: 'form-control' }, required: false %>
