--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -1,7 +1,7 @@
 <p><%= link_to "Add Representations",
-    sufia.new_batch_upload_path(representation_for: @presenter), { class: "add_representations_btn" }%></p>
+    sufia.new_batch_upload_path(representation_for: @presenter, resource_title: @presenter.display_pref_label_and_uid), { class: "add_representations_btn" }%></p>
 <p><%= link_to "Add Documentation",
-    sufia.new_batch_upload_path(document_for: @presenter), { class: "add_document_btn" } %></p>
+    sufia.new_batch_upload_path(document_for: @presenter, resource_title: @presenter.display_pref_label_and_uid), { class: "add_document_btn" } %></p>
 
 <% if @presenter.has_relationships? %>
   <%= render_preferred_representations(@presenter) %>
