--- a/app/views/lakeshore/_asset_types.html.erb
+++ b/app/views/lakeshore/_asset_types.html.erb
@@ -2,7 +2,7 @@
   <div class="row col-sm-8 col-md-6 col-lg-6">
       <%= t('lakeshore.upload.asset_type_descr_text_html') %>
   </div>
-  <div class="row col-sm-4 col-md-6 col-lg-6">
+  <div class="col-sm-4 col-md-6 col-lg-6">
     <p><%= t('lakeshore.upload.asset_types', type: "text") %></p>
     <ul>
       <% AssetType::Text.types.each do |type| %>
@@ -15,7 +15,7 @@
 </div>
 
 <div class="asset asset-image">
-  <div class="row col-sm-8 col-md-6 col-lg-6">
+  <div class="col-sm-8 col-md-6 col-lg-6">
       <%= t('lakeshore.upload.asset_type_descr_still_image_html') %>
   </div>
   <div class="row col-sm-4 col-md-6 col-lg-6">
