Make room for more asset types in JS.

--- a/app/views/lakeshore/_asset_types.html.erb
+++ b/app/views/lakeshore/_asset_types.html.erb
@@ -1,3 +1,5 @@
+<%# @TODO Going forward, as the number of asset type grows we may want to only
+    use one div block and use parameters to iterate over all the asset types.%>
 <div class="asset asset-text">
   <div class="row col-sm-8 col-md-6 col-lg-6">
       <%= t('lakeshore.upload.asset_type_descr_text_html') %>
@@ -14,12 +16,12 @@
   </div>
 </div>
 
-<div class="asset asset-image">
+<div class="asset asset-stillimage">
   <div class="col-sm-8 col-md-6 col-lg-6">
       <%= t('lakeshore.upload.asset_type_descr_still_image_html') %>
   </div>
   <div class="row col-sm-4 col-md-6 col-lg-6">
-    <p><%= t('lakeshore.upload.asset_types', type: "image") %></p>
+    <p><%= t('lakeshore.upload.asset_types', type: "still image") %></p>
     <ul>
       <% AssetType::Image.types.each do |type| %>
         <% if type.friendly %>
