--- a/app/views/records/edit_fields/_compositing_uri.html.erb
+++ b/app/views/records/edit_fields/_compositing_uri.html.erb
@@ -1,3 +1,4 @@
 <%= f.input :compositing_uri, as: :select, label: t('simple_form.labels.generic_work.compositing'),
 	collection: Compositing.options, include_blank: true, selected: @form.uri_for(:compositing),
+	wrapper_html: { class: 'selective-hide selective-show-stillimage' },
 	input_html: { class: 'form-control', multiple: false } %>
