Adding skos:altLabel, fixes #969

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,5 +1,7 @@
 <%= presenter.attribute_to_html(:aic_depositor) %>
 <%= render_linked_attributes(presenter.artist_presenters) if presenter.artist_presenters? %>
+<%=
+ presenter.attribute_to_html(:alt_label, render_as: :multiline, label: "Alternative labels") %>
 <%= presenter.attribute_to_html(:batch_uid) %>
 <%= presenter.attribute_to_html(:birth_date) %>
 <%= presenter.attribute_to_html(:birth_year) %>
